Update: host names on values files

--- a/env/uat-values.yaml
+++ b/env/uat-values.yaml
@@ -8,5 +8,5 @@ service:
 
 ingress:
   enabled: true
-  host: hello.uat.devopsprojectsdomain.online
+  host: hello-uat.devopsprojectsdomain.online
   certificateArn: arn:aws:acm:ap-south-1:539188695824:certificate/d09b9b66-fedb-4119-927d-98f2b0d65cdd
